# wheel

./: .clang-format  .clangd  .gitignore  Makefile  README.md  compile_flags.txt  justfile  meson.build  meson.options  typos.toml  wasm.ini  x86_64-w64-mingw32.ini
.github/workflows/: check.yml  linux.yml  macos.yml  webassembly.yml  windows.yml
.zed/: tasks.json
game/: .gitignore  double-pendulum.c  jump.c  meson.build  pendulum.c  player.c  poker.c  poker2.c  snake.c
game/_jump/: consts.h  draw.c  draw.h  entity.c  entity.h  game.c  game.h  player.c  player.h  types.h  utils.c  utils.h
src/: basics.h  core.h  index.html  linear.h  meson.build  minshell.html  str.c  wheel.h
src/basics/: dequeue.c  dequeue.h  float.c  list.c  list.h  math.h  random.c  random.h  sort.c  sort.h  str.c  str.h  tree.c  tree.h  xray.c  xray.h
src/basics/core/: error.h  types.h  utils.c  utils.h
src/basics/list/: types.h
src/basics/str/: types.h
src/core/: error.c  error.h
src/data/: str.c  str.h
src/data/linear/: list.h
src/linear/: list.c  list.h
src/wheel/: bigint.c  bigint.h  core.c  core.h  deque.c  deque.h  dequeue.c  dequeue.h  float.c  float.h  list.c  list.h  lol.c  lol.h  math.c  math.h  meson.build  net.c  net.h  path.c  path.h  random.c  sort.c  sort.h  str.c  str.h  sys.c  sys.h  term.c  term.h  tree.c  xray.c  xray.h
src/wheel/core/: error.h  macros.h  types.c  types.h  utils.c  utils.h
src/wheel/game/: card.c  card.h  casino.c  casino.h  command.c  command.h  conf.c  conf.h  consts.c  consts.h  poker.c  poker.h
src/wheel/list/: types.h
src/wheel/str/: types.h
src/wheel/xray/: colors.h  core.c  core.h  list.c  list.h  utils.c  utils.h  widget.c  widget.h
tests/: .gitignore  bigint.c  core.c  deque.c  dequeue.c  fib.c  float.c  hello.c  kmp.c  list.c  lol.c  math.c  meson.build  net.c  path.c  poker.c  sort.c  str.c  sys.c  system.c  tree.c  xray.c
