install_headers(
  'wheel.h',
  'wheel/bigint.h',
  'wheel/core.h',
  'wheel/core/macros.h',
  'wheel/core/types.h',
  'wheel/core/utils.h',
  'wheel/deque.h',
  'wheel/float.h',
  'wheel/game/casino.h',
  'wheel/game/command.h',
  'wheel/game/consts.h',
  'wheel/game/poker.h',
  'wheel/list.h',
  'wheel/list/types.h',
  'wheel/lol.h',
  'wheel/math.h',
  'wheel/net.h',
  'wheel/path.h',
  'wheel/random.h',
  'wheel/sort.h',
  'wheel/str.h',
  'wheel/str/types.h',
  'wheel/sys.h',
  'wheel/term.h',
  'wheel/tree.h',
  'wheel/xray.h',
  'wheel/xray/colors.h',
  'wheel/xray/core.h',
  'wheel/xray/list.h',
  'wheel/xray/utils.h',
  'wheel/xray/widget.h',
  preserve_path: true,
)

subdir('wheel')
