sources = files(
  'bigint.c',
  'core/types.c',
  'core/utils.c',
  'deque.c',
  'float.c',
  'game/casino.c',
  'game/command.c',
  'game/consts.c',
  'game/poker.c',
  'list.c',
  'lol.c',
  'math.c',
  'net.c',
  'path.c',
  'random.c',
  'sort.c',
  'str.c',
  'sys.c',
  'term.c',
  'tree.c',
  'xray/core.c',
  'xray/list.c',
  'xray/utils.c',
  'xray/widget.c',
)
